--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>Java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+    </properties>
 
 
 </project>
